# tinyllama_ft

./: .gitignore  pyproject.toml  test.ipynb
scripts/: tinyllama_ft.sh  tinyllama_ft_lora.sh
tinyllama_ft/: constants.py
tinyllama_ft/train/: finetune.py
